# sobit_light

./: README.en.md  README.md  README_en.md  install.sh
sobit_light/: CMakeLists.txt  package.xml
sobit_light_bringup/: CMakeLists.txt  package.xml
sobit_light_bringup/launch/: minimal.launch.py
sobit_light_bringup/rviz/: real.rviz
sobit_light_control/: CMakeLists.txt  package.xml
sobit_light_control/config/: dxl_controllers.yaml  dxl_controllers_v2.yaml  ros_controllers.yaml
sobit_light_description/: CMakeLists.txt  package.xml
sobit_light_description/launch/: display.launch.py  gazebo.launch.py  gazebo_w_world.launch.py
sobit_light_description/meshes/: omx1_link1.stl  omx1_link13-14_finger.stl  omx1_link5.stl  omx1_link7_gripper_base.stl  omx1_link_base.stl
sobit_light_description/meshes/arm/: omx1_link1.stl  omx1_link2.stl  omx1_link3.stl  omx1_link4.stl  omx1_link6.stl  omx1_link_base.stl
sobit_light_description/meshes/back/: back_base.stl
sobit_light_description/meshes/body/: plate_base.stl  plate_mid.stl  plate_middle.stl
sobit_light_description/meshes/hand/: omx1_link11-12_finger.stl  omx1_link15_camera_base.stl  omx1_link8_gripper.stl  omx1_link9-10_hand.stl
sobit_light_description/meshes/head/: head_base.stl  head_pan.stl  head_tilt.stl  head_wing_l.stl  head_wing_r.stl
sobit_light_description/meshes/sensor/: mic.stl  speaker.stl
sobit_light_description/robots/: sobit_light_real_robot.urdf.xacro  sobit_light_robot.urdf  sobit_light_robot.urdf.xacro
sobit_light_description/rviz/: display.rviz  gazebo.rviz
sobit_light_description/urdf/: common.xacro  dxl_control.urdf.xacro  gazebo.urdf.xacro  materials.urdf.xacro  materials.xacro  transmission.urdf.xacro  values.urdf.xacro
sobit_light_description/urdf/arm/: arm.transmission.xacro  arm.urdf.xacro  open_manipulator_x.transmission.xacro  open_manipulator_x.urdf.xacro
sobit_light_description/urdf/back/: back.urdf.xacro
sobit_light_description/urdf/base/: base.urdf.xacro  plate.urdf.xacro
sobit_light_description/urdf/body/: kachaka.urdf.xacro  plate.urdf.xacro
sobit_light_description/urdf/hand/: hand.transmission.xacro  hand.urdf.xacro
sobit_light_description/urdf/head/: head.transmission.xacro  head.urdf.xacro
sobit_light_description/urdf/sensor/: camera_back.urdf.xacro  camera_front.urdf.xacro  camera_hand.urdf.xacro  camera_head.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  mic.urdf.xacro  speaker.urdf.xacro  tof.urdf.xacro
sobit_light_description/urdf/wheel/: wheel.transmission.xacro  wheel.urdf.xacro
sobit_light_library/: CMakeLists.txt  package.xml
sobit_light_library/config/: pose_list.yaml
sobit_light_library/example/: test_control_wheel.cpp  test_control_wheel.py
sobit_light_library/include/sobit_light_library/: sobit_light_joint_controller.hpp  sobit_light_library.h  sobit_light_library.hpp  sobit_light_wheel_controller.hpp
sobit_light_library/src/: sobit_edu_joint_controller.cpp  sobit_light_joint_controller.cpp  sobit_light_library.cpp  sobit_light_wheel_controller.cpp  sobit_pro_joint_controller.cpp
sobit_light_library_py/: CMakeLists.txt  package.xml
sobit_light_library_py/include/sobit_light_library_py/: pybind11.hpp
sobit_light_library_py/sobit_light_library_py/: __init__.py  test_control_wheel.py
sobit_light_library_py/src/sobit_light_library_py/: _arm.cpp  _wheel.cpp
sobit_light_library_python/: package.xml  setup.cfg  setup.py
sobit_light_library_python/config/: pose_list.yaml
sobit_light_library_python/sobit_light_library_python/: sobit_light_joint_controller.py  sobit_light_wheel_controller.py
